--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.30.0"
+    "react-dom": "^17.0.2"
   }
 }
