--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.6.2",
     "ts-loader": "^9.2.9",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
