--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sandbox",
+  "name": "react-performance",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@private:calm1205/React_Sandbox.git"
+    "url": "git@private:calm1205/React_Performance.git"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,10 @@
   "devDependencies": {
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "2.6.2",
     "ts-loader": "^9.2.9",
